--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
               target="_blank"
               href="https://www.twitch.tv/directory/game/Paladins"><img src="https://static-cdn.jtvnw.net/ttv-boxart/491115-285x380.jpg" alt="Imagem do jogo paladins"></a>
             </li>
+
+            <li>
+              <a 
+              target="_blank"
+              href="https://www.twitch.tv/directory/game/Grand%20Theft%20Auto%20V"><img src="https://static-cdn.jtvnw.net/ttv-boxart/32982_IGDB-188x250.jpg" alt="Imagem do jogo GTA V"></a>
+            </li>
           </ul>
           </ul>
         </div>
